# A5

./: .travis.yml  README.md  a5.rosinstall
a5_ikfast_lift_manipulator_plugin/: CMakeLists.txt  a5_lift_manipulator_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
a5_ikfast_lift_manipulator_plugin/config/: ikfast.yaml
a5_ikfast_lift_manipulator_plugin/src/: a5_lift_manipulator_ikfast_moveit_plugin.cpp  a5_lift_manipulator_ikfast_solver.cpp
a5_ikfast_manipulator_plugin/: CMakeLists.txt  a5_manipulator_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
a5_ikfast_manipulator_plugin/src/: a5_manipulator_ikfast_moveit_plugin.cpp  a5_manipulator_ikfast_solver.cpp
a5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
a5_moveit_config/config/: a5.srdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
a5_moveit_config/launch/: a5_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  planning_context.launch  (+7 more)
a5_support/: CMakeLists.txt  package.xml
a5_support/launch/: load_a5.launch  test_a5.launch
a5_support/meshes/a5/collision/: mobile_platform.stl  rail_support_structure.stl
a5_support/meshes/a5/visual/: hangar.stl  hangar_columns.stl  hangar_walls.stl  rail_base.stl  rail_carriage.stl
a5_support/test/: roslaunch_test.xml
a5_support/urdf/: a5.xacro  a5_mobile_platform.xacro  a5_mobile_platform_macro.xacro  rail_lift.xacro  rail_lift_macro.xacro
boeing_sanding_ee_support/: CMakeLists.txt  package.xml
boeing_sanding_ee_support/launch/: load_sanding_ee.launch  test_sanding_ee.launch
boeing_sanding_ee_support/meshes/sanding_ee/collision/: robot_mount_collision.stl  sanding_head_collision.stl
boeing_sanding_ee_support/test/: roslaunch_test.xml
boeing_sanding_ee_support/urdf/: sanding_ee.xacro  sanding_ee_macro.xacro
motoman_es200rn_120_support/: CMakeLists.txt  package.xml
(+15 files in other folders)
