<package>
  <name>a5_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      ROS-Industrial support for the A5 Mobile Manipulator.
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for A5 mobile manipulator.
    </p>
  </description>
  <author email="michael.ripperger@swri.org">mripperger</author>
  <maintainer email="michael.ripperger@swri.org">mripperger</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/a5_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/a5/issues</url>
  <url type="repository">https://github.com/ros-industrial/a5</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
</package>
