<package>
  <name>boeing_sanding_ee_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      ROS-Industrial support for the Boeing Sanding End Effector.
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for the Boeing Sanding End Effector.
    </p>

  </description>
  <author email="michael.ripperger@swri.org">Michael Ripperger</author>
  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/boeing_sanding_ee_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/boeing/issues</url>
  <url type="repository">https://github.com/ros-industrial/boeing</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
</package>
